--- a/Lab2/Lab2.csproj
+++ b/Lab2/Lab2.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Derived.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="Found.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
